# rusty-coin

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
ui/: appwindow.slint  coincard.slint  common.slint  styles.slint
