[package]
name = "rusty_coin"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json"] }
serde =  { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slint = "1.10.0"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
webbrowser = "1.0.4"

[build-dependencies]
slint-build = "1.10.0"
